panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_macro_replacement_leads_to_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_macro_replacement_leads_to_macro_invocation.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);

int f(int x) {
    return x * 3;
}

int main() {
    int g = 3;







    printf("%d\n", 2 *g (9));

    printf("%d\n", 2 * 9 *g );
}

----- stderr -----
