panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_multiline_macro_due_to_block_comment.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--trace-preprocessor"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_multiline_macro_due_to_block_comment.c
---
success: true
exit_code: 0
----- stdout -----
panko/tests/cases/execute/preprocessor/test_multiline_macro_due_to_block_comment.c:3:9: #define MAIN Object {
    name: "MAIN",
    replacement: [
        Int("int")@panko/tests/cases/execute/preprocessor/test_multiline_macro_due_to_block_comment.c:5:8,
        Identifier("main")@panko/tests/cases/execute/preprocessor/test_multiline_macro_due_to_block_comment.c:7:8,
    ],
}

----- stderr -----
