panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_paren_from_macro_does_not_lead_to_function_call.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_paren_from_macro_does_not_lead_to_function_call.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);

int a() {
    return 27;
}










int main() {
    int called = 42;

    printf("%d\n", called );

    printf("%d\n", a ( ) );



    printf("%d\n", called );
}

----- stderr -----
